增加app启动的时候错误信息日志上传服务器 崩溃时保存错误信息

--- a/NewSubject/app/src/main/res/layout/activity_main.xml
+++ b/NewSubject/app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,10 @@
     android:background="#ffffff">
 
     <com.example.administrator.newsubject.view.FlowLayout
+        android:id="@+id/fl"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="gone">
+        android:visibility="visible">
         <Button
             android:id="@+id/btn_loading_1"
             android:layout_width="wrap_content"
@@ -25,6 +26,7 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/vp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></android.support.v4.view.ViewPager>
+        android:layout_height="match_parent"
+        android:layout_below="@id/fl"></android.support.v4.view.ViewPager>
 
 </RelativeLayout>
